# sentrybox

./: .envrc  .gitignore  README.md  flake.nix  headscale.nix  mass-storage-gadget-service.nix  mass_storage_gadget.py  pyproject.toml  sd-image.nix  tailscale.nix  zero2w.nix
config/: wifi.nix
fat32/: CMakeLists.txt  default.nix  fat32.cc  fat32.h  fat32_fuse.cc  fat32_fuse.h  main.cc  types.h
overlays/: default.nix
pkgs/: default.nix
ui/: .prettierrc  default.nix  package-lock.json  package.json  svelte.config.js
ui/src/: app.html
ui/src/lib/components/: sentry-record.svelte
ui/src/lib/server/: video-clips.js  video-info.js
ui/src/routes/: +page.svelte
ui/src/routes/recent/: +page.server.js  +page.svelte
ui/src/routes/sentry/: +layout.server.js  +page.svelte
ui/src/routes/sentry/[time]/: +page.server.js  +page.svelte
